clusters/on-prem-cluster/apps/your-spotify/your-spotify-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: your-spotify-server
  namespace: your-spotify
  labels:
    app: your-spotify-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: your-spotify-server
  template:
    metadata:
      labels:
        app: your-spotify-server
    spec:
      containers:
      - name: your-spotify-server
        image: yooooomi/your_spotify_server
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 500m
            memory: 256Mi
        ports:
        - containerPort: 8080
