clusters/on-prem-cluster/apps/your-spotify/your-spotify-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: your-spotify-server-service
  namespace: your-spotify
spec:
  selector:
    app: your-spotify-server
  ports:
    - port: 8080
      targetPort: 8080
