clusters/on-prem-cluster/apps/your-spotify/your-spotify-server/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: your-spotify-server-ingress
    annotations:
        kubernetes.io/ingress.class: traefik
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:bpF4o9uZO6FwGZat6yitQ+hXHGxJlbISuC85S0OnG2JCOB7r,iv:8sdCdGM81BZ9yK9V8r03HcE6qWnhQbIv8wFI/WsqO9g=,tag:GMOSGjg57nXQmfLIEAtY4w==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:FrSs79qQUm07+yGvnbDt56VxJHZKXXQfR+aSKew4RZBPKCJa,iv:9sr65EbWZP4G/Vl8ZOaB60KU3OOfTt5ct0QMN/EOfQ0=,tag:1QZgllIqmNDcgyZGrSnFvQ==,type:str]
          http:
            paths:
                - pathType: Prefix
                  path: /
                  backend:
                    service:
                        name: your-spotify-server-service
                        port:
                            number: 8080
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1xl8mrtu70kvhjdl2nva6dpt8wsy3fhmz6605fmwjujc3zztyeyzqd07nvv
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4Ylo0M2VNZm9iTjJQenJD
[...]
            +SLcRzm9q3qT449cFA3Hx6mSYVx161FuPuTX29xNT3KuuMIWGRJlyw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-10-15T18:38:19Z"
    mac: ENC[AES256_GCM,data:gtx9+HkeWz0t6hLiKHhUZ4ZJDOlELxeBeBj4uiFajT76zIL09oqxJQhXhyAi4TzMQR3Lxjlufif710U5Xm3EUc/Rvz1ILNlOSnXBQ79hA+aRV2QkUcPClB1G6FYby9hssbEpb7elFvaPYnG469K1fJ5I7nuP6WhM7WxsxH3yAqc=,iv:GVyJkp1jcBLj2vfokcdaVjnAgvHnAHgMwYrcNmkMw+4=,tag:1y29HTrxfFFUcdhbRjh9Ig==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|hosts|host|externalUrl)$
    version: 3.7.3
